--- a/index.html
+++ b/index.html
@@ -24,5 +24,21 @@
             </ul>
         </nav>
     </header>
+    <div class="sub-menu">
+        <ul class="menu2">
+            <li><a href="">Trending</a></li>
+            <li><a href="">Sports</a></li>
+            <li><a href="">Business</a></li>
+            <li><a href="">Art</a></li>
+            <li><a href="">Politics</a></li>
+            <li><a href="">Science</a></li>
+        </ul>
+    </div>
+    <div class="main-news">
+        <div class="box a">A</div>
+        <div class="box b">B</div>
+        <div class="box c">C</div>
+        <div class="box d">D</div>
+      </div>
 </body>
 </html>
