--- a/index.html
+++ b/index.html
@@ -1,14 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Newspaper</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Teste</h1>
-    <P>AAAA</P>
-    <p>FredGay</p>
+
+    <header>
+        <h1><span class="logo"><a href="index.html"><img src="img/logo.svg" alt=""></a></span></h1>
+
+        <nav>
+            <ul class="menu">
+                <li><a href="about.html">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="login.html">Sign up</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="sub-menu">
+        <ul class="menu2">
+            <li><a href="">Trending</a></li>
+            <li><a href="">Sports</a></li>
+            <li><a href="">Business</a></li>
+            <li><a href="">Art</a></li>
+            <li><a href="">Politics</a></li>
+            <li><a href="">Science</a></li>
+        </ul>
+    </div>
+    <div class="main-news">
+        <div class="box a">A</div>
+        <div class="box b">B</div>
+        <div class="box c">C</div>
+        <div class="box d">D</div>
+      </div>
+
+    
+
 </body>
 </html>
