--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </ul>
     </div>
     <div class="main-news">
-        <div class="box a"><img src="" alt=""></div>
+        <div class="box a"><img src="img/Noticias1.jpg" alt="" width="500px"></div>
         <div class="box b"><img src="" alt=""></div>
         <div class="box c"><img src="" alt=""></div>
         <div class="box d"><img src="" alt=""></div>
