--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body>
-    <header>
+    <header class="main_header">
         <h1><span class="logo"><a href="index.html"><img src="img/logo.svg" alt=""></a></span></h1>
 
         <nav>
@@ -34,11 +35,117 @@
             <li><a href="">Science</a></li>
         </ul>
     </div>
-    <div class="main-news">
-        <div class="box a"><img src="img/Noticias1.jpg" alt="" width="500px"></div>
-        <div class="box b"><img src="" alt=""></div>
-        <div class="box c"><img src="" alt=""></div>
-        <div class="box d"><img src="" alt=""></div>
-      </div>
+    <div class="breaking_news_container">
+        <span id="btext">Breaking News</span>
+        <marquee direction="left" onmouseover="this.stop()" onmouseout="this.start()">
+            <a href="#" class="breaking_news">
+                <p class="bntime">14 Nov 2023</p>
+                Russia and Ukranian war finally ended
+            </a>
+            <a href="#" class="breaking_news">
+                <p class="bntime">14 Nov 2023</p>
+                Cristiano Ronaldo finally left the world of football
+            </a>
+            <a href="#" class="breaking_news">
+                <p class="bntime">14 Nov 2023</p>
+                Desaster in Thailand after a tsunami
+            </a>
+            <a href="#" class="breaking_news">
+                <p class="bntime">14 Nov 2023</p>
+                Assault happened in the city of London
+            </a>
+            <a href="#" class="breaking_news">
+                <p class="bntime">14 Nov 2023</p>
+                The world is going to end in 2023
+            </a>
+        </marquee>
+    </div>
+    <main>
+        <article id="popular_news">
+            <div id="featured">
+                <h2>FEATURED</h2>
+                <section class="popular-news-carousel">
+                    <div id="carousel" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="d-block w-100" src="img/carousel1.jpg" alt="First slide">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Lorem ipsum dolor sit amet, eam tale moderatius</h5>
+                                    <p>14th Nov 2023</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="img/carousel2.jpg" alt="Second slide">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Ut facete iisque scaevola his, his no labores insolens hendrerit. </h5>
+                                    <p>14th Nov 2023</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="img/carousel3.jpg" alt="Third slide">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Habeo populo splendide ei sit, ne vis dicunt saperet voluptatibus. </h5>
+                                    <p>14th Nov 2023</p>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </section>
+            </div>
+            <div id="latest">
+                <h2>Latest</h2>
+                <section class="news">
+                    <div class="news_container">
+                        <img src="img/carousel1.jpg">
+                        <p class="latest_news_text">UT adaid asdimaisd</p>
+                    </div>
+                </section>
+                <section class="news">
+                    <div class="news_container">
+                        <img src="img/carousel1.jpg">
+                        <p class="latest_news_text">UT adaid asdimaisd</p>
+                    </div>
+                </section>
+            </div>
+            <div id="our_picks">
+                <h2>Our Picks</h2>
+                <section class="news">
+                    <div class="news_container">
+                        <img src="img/carousel1.jpg">
+                        <p class="latest_news_text">UT adaid asdimaisd</p>
+                    </div>
+                </section>
+                <section class="news">
+                    <div class="news_container">
+                        <img src="img/carousel1.jpg">
+                        <p class="latest_news_text">UT adaid asdimaisd</p>
+                    </div>
+                </section>
+            </div>
+        </article>
+    </main>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
