--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    
 </head>
 
 <body>
@@ -63,7 +65,7 @@
     <main>
         <article id="popular_news">
             <div id="featured">
-                <h2>FEATURED</h2>
+                <h2>Featured</h2>
                 <section class="popular-news-carousel">
                     <div id="carousel" class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
@@ -137,6 +139,62 @@
             </div>
         </article>
     </main>
+
+    <div class="sub-title1">
+        <h1 class="sub-title">More News</h1>
+    </div>
+
+    <div class="news-grid">
+        <div class="news-item">
+            <img src="img/soccer.jpg" alt="Top Story 1" />
+            <h2>Top Story 1</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.</p>
+        </div>
+        <div class="news-item">
+            <img src="img/carousel1.jpg" alt="Top Story 2" />
+            <h2>Top Story 2</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.</p>
+        </div>
+        <div class="news-item">
+            <img src="img/carousel2.jpg" alt="Top Story 3" />
+            <h2>Top Story 3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.</p>
+        </div>
+        <div class="news-item">
+            <img src="img/soccer.jpg" alt="Top Story 1" />
+            <h2>Top Story 1</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.</p>
+        </div>
+        <div class="news-item">
+            <img src="img/carousel1.jpg" alt="Top Story 2" />
+            <h2>Top Story 2</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.</p>
+        </div>
+        <div class="news-item">
+            <img src="img/carousel2.jpg" alt="Top Story 3" />
+            <h2>Top Story 3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.</p>
+        </div>
+    </div>
+
+
+    <footer>
+        <p>Copyright 2022 My News Website</p>
+        <ul>
+          <li><a href="terms-of-use.html">Terms of Use</a></li>
+          <li><a href="privacy-policy.html">Privacy Policy</a></li>
+          <li><a href="contact-us.html">Contact Us</a></li>
+        </ul>
+    </footer>
+
+    <script src="script.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
