--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="paginas/login.html">Sign up</a></li>
+                <li><a href="paginas/register.html"></a></li>
             </ul>
         </nav>
     </header>
