--- a/trending.html
+++ b/trending.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trending</title>
+    <title>Newspaper</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -61,86 +61,9 @@
             </a>
         </marquee>
     </div>
-    <main>
-        <article id="popular_news">
-            <div id="featured">
-                <h2>Featured</h2>
-                <section class="popular-news-carousel">
-                    <div id="carousel" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img class="d-block w-100" src="img/carousel1.jpg" alt="First slide">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Lorem ipsum dolor sit amet, eam tale moderatius</h5>
-                                    <p>14th Nov 2023</p>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/carousel2.jpg" alt="Second slide">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Ut facete iisque scaevola his, his no labores insolens hendrerit. </h5>
-                                    <p>14th Nov 2023</p>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/carousel3.jpg" alt="Third slide">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Habeo populo splendide ei sit, ne vis dicunt saperet voluptatibus. </h5>
-                                    <p>14th Nov 2023</p>
-                                </div>
-                            </div>
-                        </div>
-                        <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </div>
-                </section>
-            </div>
-            <div id="latest">
-                <h2>Latest</h2>
-                <section class="news">
-                    <div class="news_container">
-                        <img src="img/carousel1.jpg">
-                        <p class="latest_news_text">UT adaid asdimaisd</p>
-                    </div>
-                </section>
-                <section class="news">
-                    <div class="news_container">
-                        <img src="img/carousel1.jpg">
-                        <p class="latest_news_text">UT adaid asdimaisd</p>
-                    </div>
-                </section>
-            </div>
-            <div id="our_picks">
-                <h2>Our Picks</h2>
-                <section class="news">
-                    <div class="news_container">
-                        <img src="img/carousel1.jpg">
-                        <p class="latest_news_text">UT adaid asdimaisd</p>
-                    </div>
-                </section>
-                <section class="news">
-                    <div class="news_container">
-                        <img src="img/carousel1.jpg">
-                        <p class="latest_news_text">UT adaid asdimaisd</p>
-                    </div>
-                </section>
-            </div>
-        </article>
-    </main>
 
     <div class="sub-title1">
-        <h1 class="sub-title">More News</h1>
+        <h1 class="sub-title">Trending News</h1>
     </div>
 
     <div class="news-grid">
@@ -182,7 +105,6 @@
         </div>
     </div>
 
-
     <footer>
         <p>Copyright 2022 My News Website</p>
         <ul>
@@ -204,5 +126,3 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 </body>
-
-</html>
