entrar e registar feitos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trending</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
@@ -19,30 +19,20 @@
 
         <nav>
             <ul class="menu">
-                <li><a href="paginas/about.html">About</a></li>
-                <li><a href="paginas/services.html">Services</a></li>
-                <li><a href="paginas/login.html">Sign up</a></li>
-                <li><a href="paginas/register.html"></a></li>
+                <li><a href="paginas/about.html">Sobre</a></li>
+                <li><a href="paginas/services.html">Serviços</a></li>
+                <li><a href="paginas/login.html">Entrar</a></li>
             </ul>
         </nav>
     </header>
     <div class="sub-menu">
         <ul class="menu2">
-<<<<<<< HEAD
             <li><a href="paginas/trending.html">Trending</a></li>
             <li><a href="paginas/sports.html">Sports</a></li>
             <li><a href="paginas/business.html">Business</a></li>
             <li><a href="paginas/art.html">Art</a></li>
             <li><a href="paginas/politics.html">Politics</a></li>
             <li><a href="paginas/science.html">Science</a></li>
-=======
-            <li><a href="trending.html">Trending</a></li>
-            <li><a href="sports.html">Sports</a></li>
-            <li><a href="business.html">Business</a></li>
-            <li><a href="art.html">Art</a></li>
-            <li><a href="politics.html">Politics</a></li>
-            <li><a href="science.html">Science</a></li>
->>>>>>> 8e7c9cf801aa288865d2b9264ed8b9cef7acd0b4
         </ul>
     </div>
     <div class="breaking_news_container">
@@ -202,16 +192,6 @@
     </footer>
 
     <script src="script.js"></script>
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
