--- a/paginas/login.html
+++ b/paginas/login.html
@@ -23,6 +23,9 @@
             <div class="field">
                <input type="submit" value="Entrar">
             </div>
+            <div class="field">
+               <input type="button" value="Voltar">
+            </div>
             <div class="signup-link">
                Não tem conta? <a href="./register.html">Crie uma!</a>
             </div>
