--- a/paginas/register.html
+++ b/paginas/register.html
@@ -31,6 +31,9 @@
             <div class="field">
                <input type="submit" value="Registar">
             </div>
+            <div class="field">
+               <input type="button" value="Voltar">
+            </div>
             <div class="signup-link">
               Já tem conta? <a href="./login.html">Entre já!</a>
             </div>
