mudar tudo para portugues

--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
 
         <nav>
             <ul class="menu">
-                <li><a href="paginas/about.html">Sobre</a></li>
-                <li><a href="paginas/services.html">Serviços</a></li>
-                <li><a href="paginas/login.html">Entrar</a></li>
+                <li><a href="paginas/sobre.html">Sobre</a></li>
+                <li><a href="paginas/servicos.html">Serviços</a></li>
+                <li><a href="paginas/entrar.html">Entrar</a></li>
             </ul>
         </nav>
     </header>
     <div class="sub-menu">
         <ul class="menu2">
-            <li><a href="paginas/trending.html">Trending</a></li>
-            <li><a href="paginas/sports.html">Sports</a></li>
-            <li><a href="paginas/business.html">Business</a></li>
-            <li><a href="paginas/art.html">Art</a></li>
-            <li><a href="paginas/politics.html">Politics</a></li>
-            <li><a href="paginas/science.html">Science</a></li>
+            <li><a href="paginas/tendencias.html">Tendências</a></li>
+            <li><a href="paginas/desporto.html">Desporto</a></li>
+            <li><a href="paginas/negocios.html">Negócios</a></li>
+            <li><a href="paginas/arte.html">Arte</a></li>
+            <li><a href="paginas/politica.html">Politica</a></li>
+            <li><a href="paginas/ciencia.html">Ciência</a></li>
         </ul>
     </div>
     <div class="breaking_news_container">
