--- a/paginas/entrar.html
+++ b/paginas/entrar.html
@@ -4,7 +4,7 @@
    <head>
       <meta charset="utf-8">
       <title>NewsPaper</title>
-      <link rel="stylesheet" href="../styles/login.css">
+      <link rel="stylesheet" href="../styles/entrar.css">
    </head>
    <body>
       <div class="wrapper">
@@ -27,7 +27,7 @@
                <input type="button" value="Voltar">
             </div>
             <div class="signup-link">
-               Não tem conta? <a href="./register.html">Crie uma!</a>
+               Não tem conta? <a href="./registar.html">Crie uma!</a>
             </div>
          </form>
       </div>
