--- a/paginas/registar.html
+++ b/paginas/registar.html
@@ -3,8 +3,8 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
-      <title>Login Form Design | CodeLab</title>
-      <link rel="stylesheet" href="../styles/register.css">
+      <title>NewsPaper</title>
+      <link rel="stylesheet" href="../styles/registar.css">
    </head>
    <body>
       <div class="wrapper">
@@ -35,7 +35,7 @@
                <input type="button" value="Voltar">
             </div>
             <div class="signup-link">
-              Já tem conta? <a href="./login.html">Entre já!</a>
+              Já tem conta? <a href="./entrar.html">Entre já!</a>
             </div>
          </form>
       </div>
