comecar a por noticias

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap' rel="stylesheet">
     
 </head>
 
@@ -36,27 +36,27 @@
         </ul>
     </div>
     <div class="breaking_news_container">
-        <span id="btext">Breaking News</span>
+        <span id="btext">Ultimas Notícias</span>
         <marquee direction="left" onmouseover="this.stop()" onmouseout="this.start()">
             <a href="#" class="breaking_news">
                 <p class="bntime">14 Nov 2023</p>
-                Russia and Ukranian war finally ended
+                Guerra entre Rússia e Ucrania acaba!
             </a>
             <a href="#" class="breaking_news">
                 <p class="bntime">14 Nov 2023</p>
-                Cristiano Ronaldo finally left the world of football
+                Cristiano Ronaldo deixa Manchester United
             </a>
             <a href="#" class="breaking_news">
                 <p class="bntime">14 Nov 2023</p>
-                Desaster in Thailand after a tsunami
+                Desastre na Tailândia após Tsunami
             </a>
             <a href="#" class="breaking_news">
                 <p class="bntime">14 Nov 2023</p>
-                Assault happened in the city of London
+                Assaulto nas ruas de Londres
             </a>
             <a href="#" class="breaking_news">
                 <p class="bntime">14 Nov 2023</p>
-                The world is going to end in 2023
+                Mundo vai acabar em 2023
             </a>
         </marquee>
     </div>
@@ -71,8 +71,8 @@
                         <!-- Full-width images with number and caption text -->
                         <div class="mySlides fade">
                         <div class="numbertext">1 / 3</div>
-                        <img src="img/carousel1.jpg" style="width:100%">
-                        <div class="text">Noticia 1</div>
+                        <img src="img/ronaldo.jpg" style="width:100%">
+                        <div class="text">Ronaldo abandona Manchester United</div>
                         </div>
                     
                         <div class="mySlides fade">
@@ -132,7 +132,7 @@
     </main>
 
     <div class="sub-title1">
-        <h1 class="sub-title">More News</h1>
+        <h1 class="sub-title">Mais Notícias</h1>
     </div>
 
     <div class="news-grid">
