mudar umas cenas que faltavam para português

--- a/paginas/arte.html
+++ b/paginas/arte.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Art</title>
+    <title>Arte</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,21 +19,20 @@
 
         <nav>
             <ul class="menu">
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="paginas/login.html">Sign up</a></li>
-                <li><a href="paginas/register.html"></a></li>
+                <li><a href="sobre.html">About</a></li>
+                <li><a href="servicos.html">Services</a></li>
+                <li><a href="entrar.html">Sign up</a></li>
             </ul>
         </nav>
     </header>
     <div class="sub-menu">
         <ul class="menu2">
-            <li><a href="trending.html">Trending</a></li>
-            <li><a href="sports.html">Sports</a></li>
-            <li><a href="business.html">Business</a></li>
-            <li><a href="art.html">Art</a></li>
-            <li><a href="politics.html">Politics</a></li>
-            <li><a href="science.html">Science</a></li>
+            <li><a href="tendencias.html">Trending</a></li>
+            <li><a href="desporto.html">Sports</a></li>
+            <li><a href="negocios.html">Business</a></li>
+            <li><a href="arte.html">Art</a></li>
+            <li><a href="politica.html">Politics</a></li>
+            <li><a href="ciencia.html">Science</a></li>
         </ul>
     </div>
     <div class="breaking_news_container">
