--- a/paginas/registar.html
+++ b/paginas/registar.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
-      <title>NewsPaper</title>
+      <title>Registar</title>
       <link rel="stylesheet" href="../styles/registar.css">
    </head>
    <body>
