--- a/paginas/ciencia.html
+++ b/paginas/ciencia.html
@@ -67,9 +67,9 @@
 
     <div class="news-grid">
         <div class="news-item">
-            <img src="img/ebola.jpg" alt="Top Story 1" />
-            <h2>Ebola 2.0???</h2>
-            <p>Encontrado novo virus na Nigéria. Cientistas afirmam que esta é a nova variante da famosa Ebola</p>
+            <img src="img/soccer.jpg" alt="Top Story 1" />
+            <h2>Top Story 1</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="news-item">
             <img src="img/carousel1.jpg" alt="Top Story 2" />
