css categorias e paginas das categorias

--- a/paginas/ciencia.html
+++ b/paginas/ciencia.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ciência</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <title>Arte</title>
+    <link rel="stylesheet" href="../styles/categorias.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 
 <body>
     <header class="main_header">
-        <h1><span class="logo"><a href="index.html"><img src="img/logo.svg" alt=""></a></span></h1>
+        <h1><span class="logo"><a href="../index.html"><img src="../img/logo/logo.svg" alt=""></a></span></h1>
 
         <nav>
             <ul class="menu">
@@ -27,82 +27,53 @@
     </header>
     <div class="sub-menu">
         <ul class="menu2">
-            <li><a href="tendencias.html">Trending</a></li>
-            <li><a href="desporto.html">Sports</a></li>
-            <li><a href="negocios.html">Business</a></li>
-            <li><a href="arte.html">Art</a></li>
-            <li><a href="politica.html">Politics</a></li>
-            <li><a href="ciencia.html">Science</a></li>
+            <li><a href="tendencias.html">Tendências</a></li>
+            <li><a href="desporto.html">Desporto</a></li>
+            <li><a href="negocios.html">Negócios</a></li>
+            <li><a href="arte.html">Arte</a></li>
+            <li><a href="politica.html">Politica</a></li>
+            <li><a href="ciencia.html">Ciência</a></li>
         </ul>
     </div>
-    <div class="breaking_news_container">
-        <span id="btext">Breaking News</span>
-        <marquee direction="left" onmouseover="this.stop()" onmouseout="this.start()">
-            <a href="#" class="breaking_news">
-                <p class="bntime">14 Nov 2023</p>
-                Russia and Ukranian war finally ended
-            </a>
-            <a href="#" class="breaking_news">
-                <p class="bntime">14 Nov 2023</p>
-                Cristiano Ronaldo finally left the world of football
-            </a>
-            <a href="#" class="breaking_news">
-                <p class="bntime">14 Nov 2023</p>
-                Desaster in Thailand after a tsunami
-            </a>
-            <a href="#" class="breaking_news">
-                <p class="bntime">14 Nov 2023</p>
-                Assault happened in the city of London
-            </a>
-            <a href="#" class="breaking_news">
-                <p class="bntime">14 Nov 2023</p>
-                The world is going to end in 2023
-            </a>
-        </marquee>
-    </div>
+    <div class="rest-menu"></div>
 
     <div class="sub-title1">
-        <h1 class="sub-title">Science</h1>
+        <h1 class="sub-title">Ciência</h1>
     </div>
 
     <div class="news-grid">
         <div class="news-item">
-            <img src="img/soccer.jpg" alt="Top Story 1" />
-            <h2>Top Story 1</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <img src="../img/ciencia/ciencia1.jpg" alt="Top Story 1" />
+            <h2>Cientista da Universidade de Coimbra descobre fóssil de nova espécie de conífera</h2>
+            <p>O estudo tem vindo a ser desenvolvido em parceria com diversas instituições internacionais, nomeadamente o Swedish Museum of Natural History de Estocolmo...</p>
         </div>
         <div class="news-item">
-            <img src="img/carousel1.jpg" alt="Top Story 2" />
-            <h2>Top Story 2</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
+            <img src="../img/ciencia/ciencia2.jpg" alt="Top Story 2" />
+            <h2>ChatGPT. O prodígio da Inteligência Artificial é "empolgante", mas é preciso ter cuidado com "efeitos secundários"</h2>
+            <p>Modelo de IA ultrapassou um milhão de utilizadores em poucos dias e responde a todo o tipo de perguntas em português correto...</p>
         </div>
         <div class="news-item">
-            <img src="img/carousel2.jpg" alt="Top Story 3" />
-            <h2>Top Story 3</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
+            <img src="../img/ciencia/ciencia3.jpg" alt="Top Story 3" />
+            <h2>Raios-X, a prenda de Natal que assombrou o final do século XIX</h2>
+            <p>Nas vésperas do Natal de 1895, o físico alemão Wilhelm Conrad Röntgen procurava uma explicação para uma descoberta filha do acaso...</p>
         </div>
         <div class="news-item">
-            <img src="img/soccer.jpg" alt="Top Story 1" />
-            <h2>Top Story 1</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
+            <img src="../img/ciencia/ciencia4.jpg" alt="Top Story 1" />
+            <h2>"Colocar humanos na Lua dentro de dois anos parece-me realista"</h2>
+            <p>No mês do lançamento de teste do programa Artemis, ex-astronauta da NASA Mike Massimino falou com o DN sobre o futuro do setor e deixa conselhos para quem quiser seguir a carreira.</p>
         </div>
         <div class="news-item">
-            <img src="img/carousel1.jpg" alt="Top Story 2" />
-            <h2>Top Story 2</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
+            <img src="../img/ciencia/ciencia5.jpg" alt="Top Story 2" />
+            <h2>Nova terapia poderá favorecer tratamento de epilepsia e outras doenças</h2>
+            <p>Cientistas testam novo tratamento mais eficaz que poderá reduzir as convulsões espontâneas em casos de epilepsia.</p>
         </div>
         <div class="news-item">
-            <img src="img/carousel2.jpg" alt="Top Story 3" />
-            <h2>Top Story 3</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
+            <img src="../img/ciencia/ciencia6.jpg" alt="Top Story 3" />
+            <h2>Cientistas identificam mutação genética associada a linfomas e cancro do pulmão</h2>
+            <p>Estudos recentes "de sequenciação do genoma de um grande número de tumores" demonstram "que estes têm milhares de alterações genéticas, as denominadas mutações".</p>
         </div>
     </div>
-
+    
     <footer>
         <p>Copyright 2022 My News Website</p>
         <ul>
@@ -114,13 +85,5 @@
 
     <script src="script.js"></script>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+    
 </body>
