--- a/paginas/tendencias.html
+++ b/paginas/tendencias.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tendências</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <title>Arte</title>
+    <link rel="stylesheet" href="../styles/categorias.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
@@ -15,96 +15,66 @@
 
 <body>
     <header class="main_header">
-        <h1><span class="logo"><a href="index.html"><img src="img/logo.svg" alt=""></a></span></h1>
+        <h1><span class="logo"><a href="../index.html"><img src="../img/logo/logo.svg" alt=""></a></span></h1>
 
         <nav>
             <ul class="menu">
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="paginas/login.html">Sign up</a></li>
-                <li><a href="paginas/register.html"></a></li>
+                <li><a href="sobre.html">About</a></li>
+                <li><a href="servicos.html">Services</a></li>
+                <li><a href="entrar.html">Sign up</a></li>
             </ul>
         </nav>
     </header>
     <div class="sub-menu">
         <ul class="menu2">
-            <li><a href="trending.html">Trending</a></li>
-            <li><a href="sports.html">Sports</a></li>
-            <li><a href="business.html">Business</a></li>
-            <li><a href="art.html">Art</a></li>
-            <li><a href="politics.html">Politics</a></li>
-            <li><a href="science.html">Science</a></li>
+            <li><a href="paginas/tendencias.html">Tendências</a></li>
+            <li><a href="paginas/desporto.html">Desporto</a></li>
+            <li><a href="paginas/negocios.html">Negócios</a></li>
+            <li><a href="paginas/arte.html">Arte</a></li>
+            <li><a href="paginas/politica.html">Politica</a></li>
+            <li><a href="paginas/ciencia.html">Ciência</a></li>
         </ul>
     </div>
-    <div class="breaking_news_container">
-        <span id="btext">Breaking News</span>
-        <marquee direction="left" onmouseover="this.stop()" onmouseout="this.start()">
-            <a href="#" class="breaking_news">
-                <p class="bntime">14 Nov 2023</p>
-                Russia and Ukranian war finally ended
-            </a>
-            <a href="#" class="breaking_news">
-                <p class="bntime">14 Nov 2023</p>
-                Cristiano Ronaldo finally left the world of football
-            </a>
-            <a href="#" class="breaking_news">
-                <p class="bntime">14 Nov 2023</p>
-                Desaster in Thailand after a tsunami
-            </a>
-            <a href="#" class="breaking_news">
-                <p class="bntime">14 Nov 2023</p>
-                Assault happened in the city of London
-            </a>
-            <a href="#" class="breaking_news">
-                <p class="bntime">14 Nov 2023</p>
-                The world is going to end in 2023
-            </a>
-        </marquee>
-    </div>
+    <div class="rest-menu"></div>
 
     <div class="sub-title1">
-        <h1 class="sub-title">Trending News</h1>
+        <h1 class="sub-title">Arte</h1>
     </div>
 
     <div class="news-grid">
         <div class="news-item">
-            <img src="img/soccer.jpg" alt="Top Story 1" />
-            <h2>Top Story 1</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
+            <img src="https://dai.ly/x8g2a31" alt="Top Story 1" />
+            <h2>"Acredito que estamos a viver uma era dourada da escrita, quer para teatro quer para televisão"</h2>
+            <p>Ator, escritor, vencedor do prémio Pulitzer de Drama em 1992 com a peça Kentucky Cycle, e vencedor do Tony Award em 2014...</p>
         </div>
         <div class="news-item">
-            <img src="img/carousel1.jpg" alt="Top Story 2" />
-            <h2>Top Story 2</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
+            <img src="../img/arte/arte2.jpg" alt="Top Story 2" />
+            <h2>Artista plástico João Murillo volta a expor sob o mote "Guardar o Verão para Sempre</h2>
+            <p>Lançamento da exposição na 39ª Concept Store, em Lisboa, marca o regresso do artista plástico</p>
         </div>
         <div class="news-item">
-            <img src="img/carousel2.jpg" alt="Top Story 3" />
-            <h2>Top Story 3</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
+            <img src="../img/arte/arte3.jpg" alt="Top Story 3" />
+            <h2>Femme nue Couchée, de Picasso, vendida por 64 milhões de euros</h2>
+            <p>Leilão contou com sete peças de Picasso, e obras de Monet, Cézanne e Gauguin, entre outros, atingindo mais de 388 milhões de euros.</p>
         </div>
         <div class="news-item">
-            <img src="img/soccer.jpg" alt="Top Story 1" />
-            <h2>Top Story 1</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
+            <img src="../img/arte/arte4.jpg" alt="Top Story 1" />
+            <h2>Mais de 5 mil trabalhadores da cultura pediram apoio social</h2>
+            <p>5151 trabalhadores independentes solicitaram o apoio extraordinário para artistas, autores, técnicos e outros profissionais da Cultura...</p>
         </div>
         <div class="news-item">
-            <img src="img/carousel1.jpg" alt="Top Story 2" />
-            <h2>Top Story 2</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
+            <img src="../img/arte/arte5.jpg" alt="Top Story 2" />
+            <h2>Pais de futuros bailarinos exigem melhores condições enquanto duram obras na escola</h2>
+            <p>Desesperados, alunos e encarregados de educação tentam salvar o que ainda resta do ensino
+                artístico. Querem ser transferidos para um único edifício.</p>
         </div>
         <div class="news-item">
-            <img src="img/carousel2.jpg" alt="Top Story 3" />
-            <h2>Top Story 3</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
+            <img src="../img/arte/arte6.jpg" alt="Top Story 3" />
+            <h2>Yanbei, o artista chinês que em Portugal já pinta o pós-covid</h2>
+            <p>Estava cansado da poluição em Pequim, sonhou com o Canadá para emigrar e hoje nem lhe passa pela cabeça deixar Portugal, onde vive com a mulher e os dois filhos há mais de cinco anos. Continua a pintar, agora de novo cheio de ideias...</p>
         </div>
     </div>
-
+    
     <footer>
         <p>Copyright 2022 My News Website</p>
         <ul>
@@ -116,13 +86,5 @@
 
     <script src="script.js"></script>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+    
 </body>
