pagina desporto e politica

--- a/paginas/desporto.html
+++ b/paginas/desporto.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arte</title>
+    <title>Desporto</title>
     <link rel="stylesheet" href="../styles/categorias.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,51 +27,50 @@
     </header>
     <div class="sub-menu">
         <ul class="menu2">
-            <li><a href="paginas/tendencias.html">Tendências</a></li>
-            <li><a href="paginas/desporto.html">Desporto</a></li>
-            <li><a href="paginas/negocios.html">Negócios</a></li>
-            <li><a href="paginas/arte.html">Arte</a></li>
-            <li><a href="paginas/politica.html">Politica</a></li>
-            <li><a href="paginas/ciencia.html">Ciência</a></li>
+            <li><a href="tendencias.html">Tendências</a></li>
+            <li><a href="desporto.html">Desporto</a></li>
+            <li><a href="negocios.html">Negócios</a></li>
+            <li><a href="arte.html">Arte</a></li>
+            <li><a href="politica.html">Politica</a></li>
+            <li><a href="ciencia.html">Ciência</a></li>
         </ul>
     </div>
     <div class="rest-menu"></div>
 
     <div class="sub-title1">
-        <h1 class="sub-title">Arte</h1>
+        <h1 class="sub-title">Desporto</h1>
     </div>
 
     <div class="news-grid">
         <div class="news-item">
-            <img src="../img/arte/arte1.jpg" alt="Top Story 1" />
-            <h2>"Acredito que estamos a viver uma era dourada da escrita, quer para teatro quer para televisão"</h2>
-            <p>Ator, escritor, vencedor do prémio Pulitzer de Drama em 1992 com a peça Kentucky Cycle, e vencedor do Tony Award em 2014...</p>
+            <img src="../img/desporto/desporto1.jpg" alt="Top Story 1" />
+            <h2>Em dia de outro Portugal-França, recorde aqui o golo de Éder em slow motion</h2>
+            <p>O histórico minuto 109 do prolongamento da final com a França valeu a Portugal o primeiro grande título a nível de seleções. Hoje às 20.00 as duas seleções voltam a encontrar-se num Europeu de futebol.</p>
         </div>
         <div class="news-item">
-            <img src="../img/arte/arte2.jpg" alt="Top Story 2" />
-            <h2>Artista plástico João Murillo volta a expor sob o mote "Guardar o Verão para Sempre</h2>
-            <p>Lançamento da exposição na 39ª Concept Store, em Lisboa, marca o regresso do artista plástico</p>
+            <img src="../img/desporto/desporto2.jpg" alt="Top Story 2" />
+            <h2>Al-Nassr espera oficializar Ronaldo a 1 de janeiro</h2>
+            <p>Os responsáveis pelo clube saudita aguardam a chegada de CR7 e já tentam convencer o espanhol Sergio Ramos a seguir-lhe os passos</p>
         </div>
         <div class="news-item">
-            <img src="../img/arte/arte3.jpg" alt="Top Story 3" />
-            <h2>Femme nue Couchée, de Picasso, vendida por 64 milhões de euros</h2>
-            <p>Leilão contou com sete peças de Picasso, e obras de Monet, Cézanne e Gauguin, entre outros, atingindo mais de 388 milhões de euros.</p>
+            <img src="../img/desporto/desporto3.jpg" alt="Top Story 3" />
+            <h2>Conceição relativiza iminente recorde de vitórias no FC Porto</h2>
+            <p>Sérgio Conceição poderá recorde de 215 vitórias de José Maria Pedroto no comando dos dragões na receção ao Arouca.</p>
         </div>
         <div class="news-item">
-            <img src="../img/arte/arte4.jpg" alt="Top Story 1" />
-            <h2>Mais de 5 mil trabalhadores da cultura pediram apoio social</h2>
-            <p>5151 trabalhadores independentes solicitaram o apoio extraordinário para artistas, autores, técnicos e outros profissionais da Cultura...</p>
+            <img src="../img/desporto/desporto4.jpg" alt="Top Story 1" />
+            <h2>Liverpool contrata avançado neerlandês Cody Gakpo ao PSV Eindhoven</h2>
+            <p>Contratação do atacante da seleção dos Países Baixos ajudará a suprir as baixas por lesão do colombiano Luis Díaz e do português Diogo Jota.</p>
         </div>
         <div class="news-item">
-            <img src="../img/arte/arte5.jpg" alt="Top Story 2" />
-            <h2>Pais de futuros bailarinos exigem melhores condições enquanto duram obras na escola</h2>
-            <p>Desesperados, alunos e encarregados de educação tentam salvar o que ainda resta do ensino
-                artístico. Querem ser transferidos para um único edifício.</p>
+            <img src="../img/desporto/desporto5.jpg" alt="Top Story 2" />
+            <h2>Salt Bae, o homem do bife de ouro que entrou no relvado na final do Mundlal</h2>
+            <p>Chef turco conseguiu entrar, de forma inexplicável, no relvado, após a final do Mundial de futebol entre Argentina e França.</p>
         </div>
         <div class="news-item">
-            <img src="../img/arte/arte6.jpg" alt="Top Story 3" />
-            <h2>Yanbei, o artista chinês que em Portugal já pinta o pós-covid</h2>
-            <p>Estava cansado da poluição em Pequim, sonhou com o Canadá para emigrar e hoje nem lhe passa pela cabeça deixar Portugal, onde vive com a mulher e os dois filhos há mais de cinco anos. Continua a pintar, agora de novo cheio de ideias...</p>
+            <img src="../img/desporto/desporto6.jpg" alt="Top Story 3" />
+            <h2>Doncic é o segundo mais novo a chegar aos 50 triplos-duplos na NBA</h2>
+            <p>Apenas 10 jogadores na história conseguiram esta marca, com Doncic a ser apenas superado pelo lendário Oscar Robertson.</p>
         </div>
     </div>
     
