--- a/paginas/arte.html
+++ b/paginas/arte.html
@@ -27,12 +27,12 @@
     </header>
     <div class="sub-menu">
         <ul class="menu2">
-            <li><a href="paginas/tendencias.html">Tendências</a></li>
-            <li><a href="paginas/desporto.html">Desporto</a></li>
-            <li><a href="paginas/negocios.html">Negócios</a></li>
-            <li><a href="paginas/arte.html">Arte</a></li>
-            <li><a href="paginas/politica.html">Politica</a></li>
-            <li><a href="paginas/ciencia.html">Ciência</a></li>
+            <li><a href="tendencias.html">Tendências</a></li>
+            <li><a href="desporto.html">Desporto</a></li>
+            <li><a href="negocios.html">Negócios</a></li>
+            <li><a href="arte.html">Arte</a></li>
+            <li><a href="politica.html">Politica</a></li>
+            <li><a href="ciencia.html">Ciência</a></li>
         </ul>
     </div>
     <div class="rest-menu"></div>
