--- a/paginas/politica.html
+++ b/paginas/politica.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arte</title>
+    <title>Politica</title>
     <link rel="stylesheet" href="../styles/categorias.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,35 +43,34 @@
 
     <div class="news-grid">
         <div class="news-item">
-            <img src="../img/arte/arte1.jpg" alt="Top Story 1" />
-            <h2>"Acredito que estamos a viver uma era dourada da escrita, quer para teatro quer para televisão"</h2>
-            <p>Ator, escritor, vencedor do prémio Pulitzer de Drama em 1992 com a peça Kentucky Cycle, e vencedor do Tony Award em 2014...</p>
+            <img src="../img/politica/politica1.jpg" alt="Top Story 1" />
+            <h2>Líder do CDS apela a Marcelo que dissolva parlamento e convoque eleições</h2>
+            <p>Para Nuno Melo, "o ciclo socialista terminou". "Este governo PS é o governo com a maioria absoluta mais absolutamente instável da democracia em Portugal", defendeu o presidente do CDS.</p>
         </div>
         <div class="news-item">
             <img src="../img/arte/arte2.jpg" alt="Top Story 2" />
-            <h2>Artista plástico João Murillo volta a expor sob o mote "Guardar o Verão para Sempre</h2>
-            <p>Lançamento da exposição na 39ª Concept Store, em Lisboa, marca o regresso do artista plástico</p>
+            <h2>Medina demite Alexandra Reis</h2>
+            <p>Medina pediu à secretária de Estado do Tesouro que apresentasse demissão, o que foi "prontamente aceite".</p>
         </div>
         <div class="news-item">
             <img src="../img/arte/arte3.jpg" alt="Top Story 3" />
-            <h2>Femme nue Couchée, de Picasso, vendida por 64 milhões de euros</h2>
-            <p>Leilão contou com sete peças de Picasso, e obras de Monet, Cézanne e Gauguin, entre outros, atingindo mais de 388 milhões de euros.</p>
+            <h2>Chega envia queixa à Inspeção-Geral das Finanças sobre indemnizações pagas</h2>
+            <p>André Ventura pediu a realização de uma investigação às saídas financeiras da TAP nos últimos anos.</p>
         </div>
         <div class="news-item">
             <img src="../img/arte/arte4.jpg" alt="Top Story 1" />
-            <h2>Mais de 5 mil trabalhadores da cultura pediram apoio social</h2>
-            <p>5151 trabalhadores independentes solicitaram o apoio extraordinário para artistas, autores, técnicos e outros profissionais da Cultura...</p>
+            <h2>Marcelo Rebelo de Sousa: "Eu não decido o que se faz. Tenho de ir controlando o que quem decide faz"</h2>
+            <p>O Presidente da República disse que a sua função é de "ir controlando o que quem decide faz", salientando que se pensassem exatamente o mesmo, "não valia a pena" haver Presidente e primeiro-ministro.</p>
         </div>
         <div class="news-item">
             <img src="../img/arte/arte5.jpg" alt="Top Story 2" />
-            <h2>Pais de futuros bailarinos exigem melhores condições enquanto duram obras na escola</h2>
-            <p>Desesperados, alunos e encarregados de educação tentam salvar o que ainda resta do ensino
-                artístico. Querem ser transferidos para um único edifício.</p>
+            <h2>"Está em causa o princípio do fim do SNS", diz Catarina Martins sobre fecho de maternidades</h2>
+            <p>A líder do BE fala em "anúncio sorrateiro" e sem debate sobre os encerramentos das maternidades. Para Catarina Martins, "quem sempre se levantou pelo SNS não pode calar-se agora"...</p>
         </div>
         <div class="news-item">
             <img src="../img/arte/arte6.jpg" alt="Top Story 3" />
-            <h2>Yanbei, o artista chinês que em Portugal já pinta o pós-covid</h2>
-            <p>Estava cansado da poluição em Pequim, sonhou com o Canadá para emigrar e hoje nem lhe passa pela cabeça deixar Portugal, onde vive com a mulher e os dois filhos há mais de cinco anos. Continua a pintar, agora de novo cheio de ideias...</p>
+            <h2>Costa salienta acordos em maioria absoluta e rejeita ansiedades</h2>
+            <p>Primeiro-ministro recordou acordos alcançados na concertação social, na função pública, com autarquias e até com o PSD.</p>
         </div>
     </div>
     
